# smapp

./: .gitignore  CONTRIBUTING  CONTRIBUTING.md  LICENSE  README.md  pyproject.toml  setup.py  smapp.py
smapp/: __init__.py  _version.py  cli.py  smapp.py
