[build-system]
requires = ["setuptools", "setuptools_scm", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "smapp"
dynamic = ["version"]
description = "A command line tool for generating and submitting fake login data."
readme = "README.md"
license = "MIT"
authors = [{ name = "Shane Conroy", email = "sdconrox@gmail.com" }]
keywords = ["spam", "cybersecurity", "testing", "cli"]

requires-python = ">=3.6"

dependencies = [
    "requests",
    "faker"
]

[tool.setuptools]
packages = ["smapp"]

[project.scripts]
smapp = "smapp.cli:main"

[tool.setuptools_scm]
version_file = "smapp/_version.py"
